--- a/package.json
+++ b/package.json
@@ -12,9 +12,23 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "isomorphic-fetch": "^2.2.1",
+    "jsdom": "9.4.1",
+    "jsdom-global": "2.0.0",
+    "mocha-jsdom": "^1.1.0",
+    "node-qunit-phantomjs": "^1.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "node-fetch": "^1.5.3"
   }
 }
