--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "gulp test"
   },
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "author": "Ryan Christiani",
   "license": "MIT",
   "devDependencies": {
